# Sila-Prysm-Core

./: .buildkite-bazelrc  .deepsource.toml  .ethspecify.yml  .gitignore  .policy.yml  .travis.yml  CONTRIBUTING.md  DEPENDENCIES.md  INTEROP.md  README.md  SILA_PROTO_SHADOW_LAYER.md  TERMS_OF_SERVICE.md  WORKSPACE  deps.bzl  go.mod  go.sum  prysm.bat  prysm.ps1  prysm.sh  sila-consensus-specification.md  sila-execution-api-specification.md  sila-remaining-ethereum-compatibility-map.md
api/apiutil/: BUILD.bazel  header.go  log.go
api/client/builder/: BUILD.bazel  bid.go  client.go  client_test.go  log.go  types.go  types_test.go
api/fallback/: BUILD.bazel  fallback.go  fallback_test.go  log.go
api/grpc/: BUILD.bazel  grpc_connection_provider.go  grpc_connection_provider_test.go  grpcutils.go  log.go  mock_grpc_provider.go
api/rest/: BUILD.bazel  log.go  mock_rest_provider.go  rest_connection_provider.go  rest_connection_provider_test.go  rest_handler.go
api/server/middleware/: BUILD.bazel  log.go  middleware.go  middleware_test.go
api/server/structs/: BUILD.bazel  block.go  conversions.go  conversions_block.go  conversions_block_execution.go  conversions_block_execution_test.go  conversions_block_gloas.go  conversions_block_gloas_test.go  conversions_gloas.go  conversions_lightclient.go  conversions_state.go  conversions_test.go  endpoints_beacon.go  endpoints_config.go  endpoints_debug.go  endpoints_validator.go  other.go  state.go
beacon-chain/core/fulu/: BUILD.bazel  upgrade.go  upgrade_test.go
beacon-chain/core/gloas/: BUILD.bazel  attestation_test.go  bid.go  bid_test.go  builder_exit.go  deposit_request.go  deposit_request_test.go  log.go  parent_payload.go  payload.go  payload_attestation.go  payload_attestation_test.go  payload_test.go  pending_payment.go  pending_payment_test.go  upgrade.go  upgrade_test.go  withdrawals.go  withdrawals_test.go
beacon-chain/core/requests/: BUILD.bazel  consolidations.go  consolidations_test.go  deposits.go  deposits_test.go  withdrawals.go  withdrawals_test.go
beacon-chain/light-client/: BUILD.bazel  helpers.go  lightclient.go  lightclient_test.go  log.go  store_test.go
beacon-chain/operations/payloadattestation/: BUILD.bazel  pool.go  pool_test.go
beacon-chain/p2p/types/: BUILD.bazel  object_mapping.go  object_mapping_test.go  types_test.go
beacon-chain/rpc/: BUILD.bazel  endpoints.go  endpoints_test.go  log.go  service.go  service_test.go
beacon-chain/rpc/core/: BUILD.bazel  beacon.go  duties.go  duties_test.go  log.go  service.go  validator.go  validator_test.go
beacon-chain/rpc/lookup/: blocker.go  blocker_test.go  stater.go  stater_test.go
beacon-chain/rpc/testutil/: db.go  mock_blocker.go  mock_sidecars.go
beacon-chain/silaexec/: BUILD.bazel  block_cache.go  block_cache_test.go  block_reader.go  block_reader_test.go  deposit.go  deposit_test.go  errors.go  graffiti_info.go  graffiti_info_test.go  init_test.go  log.go  log_processing.go  log_processing_test.go  metrics.go  mock_test.go  options.go  payload_body.go  payload_body_test.go  prometheus.go  prometheus_test.go  rpc_connection.go  service.go  service_test.go  sila_chain_test.go  silaengine_client.go  silaengine_client_fuzz_test.go  silaengine_client_test.go  silaengineclient_fuzz_test.go
beacon-chain/silaexec/testing/: BUILD.bazel  mock_faulty_powchain.go  mock_sila_chain.go  mock_silaengine_client.go
beacon-chain/silaexec/types/: BUILD.bazel  silaexec_types.go  silaexec_types_test.go
beacon-chain/state/: BUILD.bazel  interfaces.go  interfaces_gloas.go
beacon-chain/state/fieldtrie/: field_trie_helpers.go  field_trie_test.go  helpers.go  helpers_test.go
beacon-chain/state/state-native/: BUILD.bazel  beacon_state.go  doc.go  getters_attestation.go  getters_attestation_test.go  getters_block.go  getters_block_test.go  getters_checkpoint.go  getters_checkpoint_test.go  getters_consolidation.go  getters_consolidation_test.go  getters_deposit_requests_test.go  getters_deposits.go  getters_eth1.go  getters_exit_test.go  getters_gloas.go  getters_gloas_test.go  getters_misc.go  getters_participation_test.go  getters_payload_header.go  getters_proposer_lookahead.go  getters_setters_lookahead_test.go  getters_silaexec.go  getters_state.go  getters_sync_committee.go  (+41 more)
beacon-chain/verification/: BUILD.bazel  blob_test.go  cache.go  data_column.go  data_column_gloas_test.go  data_column_test.go  execution_payload_bid.go  execution_payload_bid_test.go  execution_payload_envelope.go  execution_payload_envelope_test.go  filesystem.go  filesystem_test.go  initializer.go  interface.go  log.go  requirements.go  result.go  signed_proposer_preferences.go  signed_proposer_preferences_test.go  sila_payload_envelope_test.go
cmd/silactl/: BUILD.bazel
consensus-types/blocks/: BUILD.bazel  execution.go  execution_payload_envelope.go  execution_payload_envelope_test.go  execution_test.go  factory.go  factory_test.go  get_payload.go  getters.go  getters_test.go  kzg.go  kzg_test.go  proofs.go  proto.go  proto_test.go  roblob.go  roblob_test.go  rodatacolumn.go  rodatacolumn_test.go  setters.go  setters_test.go  signed_execution_bid.go  signed_execution_bid_test.go  sila_payload_envelope.go  sila_payload_envelope_test.go  types.go
consensus-types/hdiff/: BUILD.bazel  fuzz_test.go  log.go  property_test.go  security_test.go  state_diff.go  state_diff.md  state_diff_gloas.go  state_diff_gloas_test.go  state_diff_test.go
consensus-types/interfaces/: BUILD.bazel  beacon_block.go  execution_payload_envelope.go  light_client.go  signed_execution_payload_bid.go  sila_payload_envelope.go  utils.go  utils_test.go
consensus-types/mock/: BUILD.bazel  block.go
crypto/random/: BUILD.bazel  log.go
proto/migration/: BUILD.bazel  enums.go  enums_test.go  v1alpha1_to_v1.go  v1alpha1_to_v1_test.go
proto/ssz_query/: BUILD.bazel  response.pb.go  response.proto
testing/validator-mock/: BUILD.bazel  node_client_mock.go  validator_client_mock.go  validator_mock.go
tools/http-request-sink/: BUILD.bazel  main_test.go
tools/silaexec_exporter/: BUILD.bazel  main.go
(+1925 files in other folders)
