load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fallback.go",
        "log.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/api/fallback",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["fallback_test.go"],
    embed = [":go_default_library"],
    deps = ["//testing/assert:go_default_library"],
)
