load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "mock_rest_provider.go",
        "rest_connection_provider.go",
        "rest_handler.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/api/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//api/apiutil:go_default_library",
        "//api/client:go_default_library",
        "//config/params:go_default_library",
        "//network/httputil:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["rest_connection_provider_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
    ],
)
