load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "error.go",
        "interfaces.go",
        "interfaces_gloas.go",
        "prometheus.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/beacon-chain/state",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/state/state-native/custom-types:go_default_library",
        "//beacon-chain/state/state-native/types:go_default_library",
        "//config/fieldparams:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//crypto/bls:go_default_library",
        "//proto/silaengine/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_sila_go_bitfield//:go_default_library",
    ],
)
