load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "batch.go",
        "blob.go",
        "cache.go",
        "data_column.go",
        "data_column_gloas.go",
        "error.go",
        "sila_payload_bid.go",
        "sila_payload_envelope.go",
        "fake.go",
        "filesystem.go",
        "initializer.go",
        "interface.go",
        "log.go",
        "metrics.go",
        "mock.go",
        "payload_attestation.go",
        "payload_attestation_mock.go",
        "requirements.go",
        "result.go",
        "signed_proposer_preferences.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/beacon-chain/verification",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/blockchain/kzg:go_default_library",
        "//beacon-chain/core/gloas:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/core/peerdas:go_default_library",
        "//beacon-chain/core/signing:go_default_library",
        "//beacon-chain/core/transition:go_default_library",
        "//beacon-chain/forkchoice/types:go_default_library",
        "//beacon-chain/startup:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//cache/lru:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/payload-attestation:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//crypto/bls:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//runtime/logging:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_hashicorp_golang_lru//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@org_golang_x_sync//singleflight:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "batch_test.go",
        "blob_test.go",
        "cache_test.go",
        "data_column_gloas_test.go",
        "data_column_test.go",
        "sila_payload_bid_test.go",
        "sila_payload_envelope_test.go",
        "filesystem_test.go",
        "gas_limit_test.go",
        "initializer_test.go",
        "payload_attestation_test.go",
        "result_test.go",
        "signed_proposer_preferences_test.go",
        "verification_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/blockchain/kzg:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/core/peerdas:go_default_library",
        "//beacon-chain/core/signing:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/forkchoice/types:go_default_library",
        "//beacon-chain/startup:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/payload-attestation:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//crypto/bls:go_default_library",
        "//crypto/bls/common:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/silaengine/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//runtime/interop:go_default_library",
        "//testing/require:go_default_library",
        "//testing/util:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
