load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@sila//tools/go:def.bzl", "go_library")
load("//tools:sila_image.bzl", "sila_image_upload")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "main.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/cmd/silactl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/silactl/checkpointsync:go_default_library",
        "//cmd/silactl/db:go_default_library",
        "//cmd/silactl/p2p:go_default_library",
        "//cmd/silactl/testnet:go_default_library",
        "//cmd/silactl/validator:go_default_library",
        "//cmd/silactl/weaksubjectivity:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "silactl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

sila_image_upload(
    name = "push_images",
    binary = ":silactl",
    entrypoint = ["/silactl"],
    repository = "gcr.io/sila-chain/sila/cmd/silactl",
    symlinks = {
        # Backwards compatibility for images that depended on the old filepath.
        "/app/cmd/silactl/silactl": "/silactl",
    },
    tags = ["manual"],
)
