load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "execution.go",
        "sila_payload_envelope.go",
        "factory.go",
        "get_payload.go",
        "getters.go",
        "kzg.go",
        "proofs.go",
        "proto.go",
        "roblob.go",
        "roblock.go",
        "rodatacolumn.go",
        "setters.go",
        "signed_sila_bid.go",
        "types.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/consensus-types/blocks",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/core/signing:go_default_library",
        "//beacon-chain/state/stateutil:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//container/trie:go_default_library",
        "//crypto/hash/htr:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//encoding/ssz:go_default_library",
        "//monitoring/tracing/trace:go_default_library",
        "//proto/silaengine/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//proto/sila/v1alpha1/validator-client:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sila_fastssz//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "sila_payload_envelope_test.go",
        "execution_test.go",
        "factory_test.go",
        "getters_test.go",
        "kzg_test.go",
        "proofs_test.go",
        "proto_test.go",
        "roblob_test.go",
        "roblock_test.go",
        "rodatacolumn_test.go",
        "setters_test.go",
        "signed_sila_bid_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/core/signing:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//container/trie:go_default_library",
        "//crypto/hash/htr:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/silaengine/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//proto/sila/v1alpha1/validator-client:go_default_library",
        "//runtime/version:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_sila_fastssz//:go_default_library",
        "@com_github_sila_go_bitfield//:go_default_library",
    ],
)
