load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "beacon_block.go",
        "error.go",
        "sila_payload_envelope.go",
        "light_client.go",
        "signed_sila_payload_bid.go",
        "utils.go",
        "validator.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/consensus-types/interfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//proto/silaengine/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//proto/sila/v1alpha1/validator-client:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sila_fastssz//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "error_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//config/fieldparams:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//runtime/version:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
