load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["block.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/consensus-types/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//proto/engine/v1:go_default_library",
        "//proto/silaapi/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//proto/sila/v1alpha1/validator-client:go_default_library",
        "@com_github_sila_fastssz//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
