load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "enums.go",
        "v1alpha1_to_v1.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/proto/migration",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/silaapi/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "enums_test.go",
        "v1alpha1_to_v1_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/silaapi/v1:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
    ],
)
