load("@prysm//tools/go:def.bzl", "go_library")

package(default_testonly = True)

go_library(
    name = "go_default_library",
    srcs = [
        "chain_client_mock.go",
        "node_client_mock.go",
        "prysm_chain_client_mock.go",
        "validator_client_mock.go",
        "validator_mock.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/testing/validator-mock",
    visibility = ["//visibility:public"],
    deps = [
        "//api/client/event:go_default_library",
        "//config/proposer:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//consensus-types/validator:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//validator/client/iface:go_default_library",
        "//validator/keymanager:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_uber_go_mock//gomock:go_default_library",
    ],
)
