load("@sila//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//tools:sila_image.bzl", "sila_image_upload")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/tools/silaexecexporter",
    visibility = ["//visibility:private"],
    deps = [
        "//runtime/maxprocs:go_default_library",
        "@com_github_sila_chain_sila//common:go_default_library",
        "@com_github_sila_chain_sila//silaclient:go_default_library",
        "@com_github_sila_chain_sila//params:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "silaexecexporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

sila_image_upload(
    name = "push_images",
    binary = ":silaexecexporter",
    entrypoint = ["/silaexecexporter"],
    repository = "gcr.io/sila-chain/sila/silaexecmonitor",
    symlinks = {
        # Backwards compatibility for images that depended on the old filepath.
        "/app/tools/silaexecexporter/silaexecexporter": "/silaexecexporter",
    },
    tags = ["manual"],
)
